added more text to about us sections. added link and aria label to about sections

--- a/index.html
+++ b/index.html
@@ -24,33 +24,61 @@
     <header>
         <div id="main-header">
             <div class="container">
-              <h1 id="logo">Pixel Pals</h1>
-              <nav id="navbar">
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#" target="_blank">Sign Up</a></li>
-                  <li><a href="#" target="_blank">Contact Us</a></li>
-                </ul>
-              </nav>
+                <h1 id="logo">Pixel Pals <i class="fa-solid fa-gamepad" style="color: #74C0FC;"></i></h1>
+                <nav id="navbar">
+                    <ul>
+                        <li><a href="#hero" aria-label="Back to Top">Home</a></li>
+                        <li><a href="#about" aria-label="Brings you to About Us section">About Us</a></li>
+                        <li><a href="#signup" aria-label="Brings you to Sign Up section" target="_blank">Sign Up</a>
+                        </li>
+                        <li><a href="#contact" aria-label="Brings you to Contact Us section" target="_blank">Contact
+                                Us</a></li>
+                    </ul>
+                </nav>
             </div>
-          </div>
+        </div>
     </header>
 
     <!--Main-->
     <main>
         <section id="hero">
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <h1>About Us</h1>
             <div class="about-info">
                 <div>
-                <p>At <b>Pixel Pals</b>, we’re passionate gamers just like you. Our community is dedicated 
-                    to bringing together gamers from all walks of life, whether you’re a casual player, a 
-                    competitive esports enthusiast, or someone who loves to dive deep into the latest game
-                     lore.We believe in the power of gaming to bring people together, foster friendships,
-                    and create unforgettable experiences.
-                </p>
+                    <p>At <b>Pixel Pals</b>, we believe in the power of gaming to bring people together. Our community is a
+                        vibrant hub where gamers from all walks of life connect, compete, and collaborate. Whether
+                        you're a casual player, a competitive pro, or someone who simply loves to talk about games,
+                        you'll find a home here.</p>
+<br>
+                       <h3>Our Mission</h3> 
+                       <br>
+                        <p>Our mission is to create an inclusive and engaging environment where gamers can share their
+                        passion, learn from each other, and grow together. We strive to support our members by providing
+                        a platform that fosters friendship, teamwork, and a love for all things gaming.</p>
+<br>
+                        <h3>What We Offer</h3>
+                        <br>
+                        <ul>
+
+                            <li>Diverse Gaming Events: From casual game nights to competitive tournaments, there's
+                                always something exciting happening at Pixel Pals.</li>
+                            <li>Community Forums: Engage in lively discussions, share tips and strategies, or just chat
+                                about your favorite games in our active forums.</li>
+                            <li>Exclusive Content: Enjoy access to game reviews, tutorials, and the latest news in the
+                                gaming world, curated by our dedicated team.</li>
+                            <li>Supportive Environment: Our community is built on respect and inclusivity, ensuring that
+                                all members feel welcome and valued.</li>
+                        </ul>
+                        <br>
+                        <h3>Join Us!</h3>
+                        <p>Becoming a part of Pixel Pals means joining a family of like-minded individuals who share your
+                            love for gaming. Together, we explore new worlds, conquer challenges, and celebrate our
+                            victories. Come and be a part of something special—your next adventure awaits!</p>
+<br>
+                        <p>Welcome to Pixel Pals, where gaming friendships are made pixel by pixel.</p>
+                    </p>
                 </div>
             </div>
         </section>
@@ -58,6 +86,7 @@
 
     <!--Footer-->
     <footer>
+        <!--Links to Socials using Font Awesome Icons-->
         <ul id="socials">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
@@ -78,6 +107,11 @@
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i></a>
+            <li>
+                <a href="https://www.discord.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Discord page (opens in a new tab)">
+                    <i class="fa-brands fa-discord"></i></a>
+            </li>
             </li>
         </ul>
     </footer>
