--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!--Main-->
     <main>
         <section id="hero">
+            <h1 id="slogan" class="slogan">Game Together, Laugh Forever!</h1>
         </section>
         <!--About Us Text format-->
         <section id="about" class="about">
