added video with autoplay and loop

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                     <p>Welcome to Pixel Pals, where gaming friendships are made pixel by pixel.</p>
                     </p>
                 </div>
+                <div id="video" class="video">
+                    <video width="800" autoplay muted controls loop>
+                    <source src="assets/video/9068522-hd_1920_1080_25fps.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
+                </div>
             </div>
         </section>
         <!--Sign Up-->
@@ -119,6 +125,26 @@
                 </form>
             </div>
 
+        </section>
+        <section id="contact" class="contact">
+            <div id="contact-text" class="contact-text">
+                <h1>Contact Us</h1>
+                <br>
+                <p>Have questions, feedback, or just want to say hello? We’d love to hear from you! At Pixel Pals, we’re always here to help and ensure you have the best gaming experience possible. Reach out to us through any of the following methods:</p>
+                <br>
+                <ul>
+                    <li><i class="fa-solid fa-hashtag" style="color: #74C0FC;"></i><b> Social Media:</b> Connect with us
+                        on Twitter, Facebook, and Instagram @PixelPalsCommunity</li>
+                    <br>
+                    <li><i class="fa-solid fa-envelope" style="color: #74C0FC;"></i><b> Email:</b> pixelpals@gmail.com
+                    </li>
+                    <br>
+                    <li><i class="fa-solid fa-phone" style="color: #74C0FC;"></i><b> Phone:</b> (353)891234567</li>
+                    <br>
+                    <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
