--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <!--Main-->
     <main>
         <section id="hero">
-            <h1 id="slogan" class="slogan">Game Together, Laugh Forever!</h1>
+            <h2 id="slogan" class="slogan">Game Together, Laugh Forever!</h2>
         </section>
         <!--About Us Text format-->
         <section id="about" class="about">
-            <h1>About Us</h1>
+            <h2>About Us</h2>
             <div class="about-info">
                 <div>
                     <p>At <b>Pixel Pals</b>, we believe in the power of gaming to bring people together. Our community
@@ -79,7 +79,6 @@
                         ourvictories. Come and be a part of something special—your next adventure awaits!</p>
                     <br>
                     <p>Welcome to Pixel Pals, where gaming friendships are made pixel by pixel.</p>
-                    </p>
                 </div>
                 <div id="video" class="video">
                     <video width="800" autoplay muted controls loop>
@@ -99,7 +98,7 @@
                 let's level up together!
             </p>
             <br>
-            <div class="container">
+            <div class="container-SU">
                 <form action="https://formdump.codeinstitute.net">
 
                     <label for="fname">First Name</label>
@@ -128,28 +127,22 @@
         </section>
         <section id="contact" class="contact">
             <div id="contact-text" class="contact-text">
-                <h1>Contact Us</h1>
+                <h2>Contact Us</h2>
                 <br>
                 <p>Have questions, feedback, or just want to say hello? We’d love to hear from you! At Pixel Pals, we’re always here to help and ensure you have the best gaming experience possible. Reach out to us through any of the following methods:</p>
                 <br>
-                <ul>
-                    <li><i class="fa-solid fa-hashtag" style="color: #74C0FC;"></i><b> Social Media:</b> Connect with us
-                        on Twitter, Facebook, and Instagram @PixelPalsCommunity</li>
-                    <br>
-                    <li><i class="fa-solid fa-envelope" style="color: #74C0FC;"></i><b> Email:</b> pixelpals@gmail.com
-                    </li>
-                    <br>
+                <ul id="contact-ul" class="contact-ul">
+                    <li><i class="fa-solid fa-hashtag" style="color: #74C0FC;"></i><b> Social Media:</b> Connect with us on Twitter, Facebook, and Instagram @PixelPalsCommunity</li>
+                    <li><i class="fa-solid fa-envelope" style="color: #74C0FC;"></i><b> Email:</b> pixelpals@gmail.com</li>
                     <li><i class="fa-solid fa-phone" style="color: #74C0FC;"></i><b> Phone:</b> (353)891234567</li>
-                    <br>
-                    <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland
-                    </li>
+                    <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland</li>
                 </ul>
             </div>
         </section>
     </main>
 
     <!--Footer-->
-    <footer>
+    <footer class="footer">
         <!--Links to Socials using Font Awesome Icons-->
         <ul id="socials">
             <li>
@@ -175,7 +168,6 @@
                 <a href="https://www.discord.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Discord page (opens in a new tab)">
                     <i class="fa-brands fa-discord"></i></a>
-            </li>
             </li>
         </ul>
     </footer>
