Added formatting to smaller and medium screens and fixed video to fit screens also

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags to help search engines -->
     <meta name="description"
-        content="Club for Gaming. Gaming in Ireland. Online Video Games. Meet Up Gaming. Online Gaming.">
-    <meta name="keywords" content="gaming, online, gaming club, gaming meet up, gaming ireland, gaming dublin">
+        content="Pixel Pals, Club for Gaming. Gaming in Ireland. Online Video Games. Meet Up Gaming. Online Gaming.">
+    <meta name="keywords" content="pixel pals, pixelpals, gaming, online, gaming club, gaming meet up, gaming ireland, gaming dublin">
     <!--Title-->
     <title>Gaming Club</title>
     <!-- Favicon -->
@@ -81,7 +81,7 @@
                     <p>Welcome to Pixel Pals, where gaming friendships are made pixel by pixel.</p>
                 </div>
                 <div id="video" class="video">
-                    <video width="800" autoplay muted controls loop>
+                    <video width="800vw" autoplay muted controls loop>
                     <source src="assets/video/9068522-hd_1920_1080_25fps.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video>
@@ -98,7 +98,7 @@
                 let's level up together!
             </p>
             <br>
-            <div class="container-SU">
+            <div class="container-su">
                 <form action="https://formdump.codeinstitute.net">
 
                     <label for="fname">First Name</label>
