Add Flip cards and styles in a line using help from W3 school tutorial

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- Meta tags to help search engines -->
     <meta name="description"
         content="Pixel Pals, Club for Gaming. Gaming in Ireland. Online Video Games. Meet Up Gaming. Online Gaming.">
-    <meta name="keywords" content="pixel pals, pixelpals, gaming, online, gaming club, gaming meet up, gaming ireland, gaming dublin">
+    <meta name="keywords"
+        content="pixel pals, pixelpals, gaming, online, gaming club, gaming meet up, gaming ireland, gaming dublin">
     <!--Title-->
     <title>Gaming Club</title>
     <!-- Favicon -->
@@ -82,14 +83,52 @@
                 </div>
                 <div id="video" class="video">
                     <video width="800vw" autoplay muted controls loop>
-                    <source src="assets/video/9068522-hd_1920_1080_25fps.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                  </video>
+                        <source src="assets/video/9068522-hd_1920_1080_25fps.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </section>
         <!--Sign Up-->
         <section id="signup" class="signup">
+            <div style="display:flex">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect + Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect + Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect + Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <h2>Join the Fun!</h2>
             <br>
             <p>Join Pixel Pals today and become part of a thriving community of gamers who share your passion! Connect,
@@ -129,13 +168,18 @@
             <div id="contact-text" class="contact-text">
                 <h2>Contact Us</h2>
                 <br>
-                <p>Have questions, feedback, or just want to say hello? We’d love to hear from you! At Pixel Pals, we’re always here to help and ensure you have the best gaming experience possible. Reach out to us through any of the following methods:</p>
+                <p>Have questions, feedback, or just want to say hello? We’d love to hear from you! At Pixel Pals, we’re
+                    always here to help and ensure you have the best gaming experience possible. Reach out to us through
+                    any of the following methods:</p>
                 <br>
                 <ul id="contact-ul" class="contact-ul">
-                    <li><i class="fa-solid fa-hashtag" style="color: #74C0FC;"></i><b> Social Media:</b> Connect with us on Twitter, Facebook, and Instagram @PixelPalsCommunity</li>
-                    <li><i class="fa-solid fa-envelope" style="color: #74C0FC;"></i><b> Email:</b> pixelpals@gmail.com</li>
+                    <li><i class="fa-solid fa-hashtag" style="color: #74C0FC;"></i><b> Social Media:</b> Connect with us
+                        on Twitter, Facebook, and Instagram @PixelPalsCommunity</li>
+                    <li><i class="fa-solid fa-envelope" style="color: #74C0FC;"></i><b> Email:</b> pixelpals@gmail.com
+                    </li>
                     <li><i class="fa-solid fa-phone" style="color: #74C0FC;"></i><b> Phone:</b> (353)891234567</li>
-                    <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland</li>
+                    <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland
+                    </li>
                 </ul>
             </div>
         </section>
