Made seperate section for Flipcards so I could centre it

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                 </div>
             </div>
         </section>
-        <!--Sign Up-->
-        <section id="signup" class="signup">
+        <section class="flip">
             <div style="display:flex">
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -129,6 +128,9 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!--Sign Up-->
+        <section id="signup" class="signup">
             <h2>Join the Fun!</h2>
             <br>
             <p>Join Pixel Pals today and become part of a thriving community of gamers who share your passion! Connect,
