Text to flipcards and padding

--- a/index.html
+++ b/index.html
@@ -94,37 +94,36 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                            <h2>How many active users?</h2>
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect + Engineer</p>
-                            <p>We love that guy</p>
+                            <h1>Over 1000 active users!</h1>
+                            <p>With more joining everyday</p>
                         </div>
                     </div>
                 </div>
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                            <h2>What platforms are supported?</h2>
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect + Engineer</p>
-                            <p>We love that guy</p>
+                            <h1>PC, Xbox, Playstation and Switch!</h1>
+                            <p>Each platform has its own section on Discord</p>
                         </div>
+                    </div>
                     </div>
                 </div>
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                            <h2>What giveaways are there?</h2>
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect + Engineer</p>
-                            <p>We love that guy</p>
+                            <h1>Game Vouchers, Store Credit and Merch!</h1>
+                            <p>Over 50 giveaways so far</p>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
