--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </section>
         <section class="flip">
-            <div style="display:flex">
+            <div class="flip-container">
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
@@ -113,18 +113,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h2>What giveaways are there?</h2>
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>Game Vouchers, Store Credit and Merch!</h1>
-                        <p>Over 50 giveaways so far</p>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <h2>What giveaways are there?</h2>
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>Game Vouchers, Store Credit and Merch!</h1>
+                            <p>Over 50 giveaways so far</p>
+                        </div>
                     </div>
                 </div>
             </div>
+
             </div>
             </div>
         </section>
@@ -182,11 +183,11 @@
                     <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland
                     </li>
                 </ul>
-                <div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no"
+                <div style="width: 100%"><iframe width="100%" height="250" frameborder="0" scrolling="no"
                         marginheight="0" marginwidth="0"
-                        src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-                            href="https://www.gps.ie/">gps trackers</a></iframe></div>
-            </div>
+                        src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                            href="https://www.gps.ie/">gps tracker sport</a></iframe>
+                </div>
         </section>
     </main>
 
