--- a/index.html
+++ b/index.html
@@ -143,10 +143,13 @@
                 <form action="https://formdump.codeinstitute.net">
 
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your Email.." required>
 
                     <label for="platform">Favorite Platform</label>
                     <select id="platform" name="platform">
