changes to code to pass HTML and CSS validator

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
         content="Pixel Pals, Club for Gaming. Gaming in Ireland. Online Video Games. Meet Up Gaming. Online Gaming.">
     <meta name="keywords"
         content="pixel pals, pixelpals, gaming, online, gaming club, gaming meet up, gaming ireland, gaming dublin">
-    <!--Title-->
+    <!-- Title -->
     <title>Gaming Club</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
-    <!--Style Sheet-->
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/cbea92b3b7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         <div id="main-header">
             <div class="container">
@@ -30,20 +30,20 @@
                     <ul>
                         <li><a href="#hero" aria-label="Jump to Top">Home</a></li>
                         <li><a href="#about" aria-label="Jump to About Us section">About Us</a></li>
-                        <li><a href="#signup" aria-label="Jump you to Sign Up section">Sign Up</a></li>
-                        <li><a href="#contact" aria-label="Jump you to Contact Us section">Contact Us</a></li>
+                        <li><a href="#signup" aria-label="Jump to Sign Up section">Sign Up</a></li>
+                        <li><a href="#contact" aria-label="Jump to Contact Us section">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
-    <!--Main-->
+    <!-- Main -->
     <main>
         <section id="hero">
             <h2 id="slogan" class="slogan">Game Together, Laugh Forever!</h2>
         </section>
-        <!--About Us Text format-->
+        <!-- About Us Text format -->
         <section id="about" class="about">
             <h2>About Us</h2>
             <div class="about-info">
@@ -62,27 +62,26 @@
                     <h3>What We Offer</h3>
                     <br>
                     <ul>
-
-                        <li>Diverse Gaming Events: From casual game nights to competitive tournaments, there's
-                            always something exciting happening at Pixel Pals.</li>
+                        <li>Diverse Gaming Events: From casual game nights to competitive tournaments, there's always
+                            something exciting happening at Pixel Pals.</li>
                         <li>Community Forums: Engage in lively discussions, share tips and strategies, or just chat
                             about your favorite games in our active forums.</li>
                         <li>Exclusive Content: Enjoy access to game reviews, tutorials, and the latest news in the
                             gaming world, curated by our dedicated team.</li>
-                        <li>Supportive Environment: Our community is built on respect and inclusivity, ensuring that
-                            all members feel welcome and valued.</li>
+                        <li>Supportive Environment: Our community is built on respect and inclusivity, ensuring that all
+                            members feel welcome and valued.</li>
                     </ul>
                     <br>
                     <h3>Join Us!</h3>
                     <br>
                     <p>Becoming a part of Pixel Pals means joining a family of like-minded individuals who share your
-                        love for gaming. Together, we explore new worlds, conquer challenges, and celebrate
-                        ourvictories. Come and be a part of something special—your next adventure awaits!</p>
+                        love for gaming. Together, we explore new worlds, conquer challenges, and celebrate our
+                        victories. Come and be a part of something special—your next adventure awaits!</p>
                     <br>
                     <p>Welcome to Pixel Pals, where gaming friendships are made pixel by pixel.</p>
                 </div>
                 <div id="video" class="video">
-                    <video width="800vw" autoplay muted controls loop>
+                    <video width="800" autoplay muted controls loop>
                         <source src="assets/video/9068522-hd_1920_1080_25fps.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -97,8 +96,8 @@
                             <h2>How many active users?</h2>
                         </div>
                         <div class="flip-card-back">
-                            <h1>Over 1000 active users!</h1>
-                            <p>With more joining everyday</p>
+                            <h2>Over 1000 active users!</h2>
+                            <p>With more joining every day</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +107,7 @@
                             <h2>What platforms are supported?</h2>
                         </div>
                         <div class="flip-card-back">
-                            <h1>PC, Xbox, Playstation and Switch!</h1>
+                            <h2>PC, Xbox, PlayStation, and Switch!</h2>
                             <p>Each platform has its own section on Discord</p>
                         </div>
                     </div>
@@ -119,55 +118,43 @@
                             <h2>What giveaways are there?</h2>
                         </div>
                         <div class="flip-card-back">
-                            <h1>Game Vouchers, Store Credit and Merch!</h1>
+                            <h2>Game Vouchers, Store Credit, and Merch!</h2>
                             <p>Over 50 giveaways so far</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-            </div>
-            </div>
         </section>
-        <!--Sign Up-->
+        <!-- Sign Up -->
         <section id="signup" class="signup">
             <h2>Join the Fun!</h2>
             <br>
             <p>Join Pixel Pals today and become part of a thriving community of gamers who share your passion! Connect,
                 compete, and collaborate with fellow enthusiasts in a supportive and inclusive environment. Don't miss
                 out on exciting events, exclusive content, and the chance to make lasting friendships. Sign up now and
-                let's level up together!
-            </p>
+                let's level up together!</p>
             <br>
             <div class="container-su">
                 <form action="https://formdump.codeinstitute.net">
-
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
-
                     <label for="lname">Last Name</label>
                     <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
-
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Your Email.." required>
-
                     <label for="platform">Favorite Platform</label>
                     <select id="platform" name="platform">
                         <option value="pc">PC</option>
                         <option value="xbox">Xbox</option>
-                        <option value="playstation">Playstation</option>
+                        <option value="playstation">PlayStation</option>
                         <option value="switch">Nintendo Switch</option>
                     </select>
-
                     <label for="subject">Favorite Games</label>
-                    <textarea id="subject" name="favorite-games" placeholder="What games do you love to most.."
+                    <textarea id="subject" name="favorite-games" placeholder="What games do you love the most.."
                         style="height:200px"></textarea>
-
                     <input type="submit" value="Submit">
-
                 </form>
             </div>
-
         </section>
         <section id="contact" class="contact">
             <div id="contact-text" class="contact-text">
@@ -186,45 +173,51 @@
                     <li><i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i><b> Office:</b> Dublin, Ireland
                     </li>
                 </ul>
-                <div style="width: 100%"><iframe width="100%" height="250" frameborder="0" scrolling="no"
-                        marginheight="0" marginwidth="0"
-                        src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-                            href="https://www.gps.ie/">gps tracker sport</a></iframe>
+                <div class="map-container">
+                    <iframe
+                        src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                        allowfullscreen></iframe>
                 </div>
+            </div>
         </section>
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer class="footer">
-        <!--Links to Socials using Font Awesome Icons-->
+        <!-- Links to Socials using Font Awesome Icons -->
         <ul id="socials">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
-                    <i class="fa-brands fa-facebook"></i></a>
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
             <li>
                 <a href="https://www.x.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-square-x-twitter"></i></a>
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our YouTube page (opens in a new tab)">
-                    <i class="fa-brands fa-youtube-square"></i></a>
+                    <i class="fa-brands fa-youtube-square"></i>
+                </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
-                    <i class="fa-brands fa-instagram"></i></a>
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
             <li>
                 <a href="https://www.discord.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Discord page (opens in a new tab)">
-                    <i class="fa-brands fa-discord"></i></a>
+                    <i class="fa-brands fa-discord"></i>
+                </a>
             </li>
         </ul>
     </footer>
-
 </body>
 
 </html>
