--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <!--Style Sheet-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://kit.fontawesome.com/cbea92b3b7.js">
     <script src="https://kit.fontawesome.com/cbea92b3b7.js" crossorigin="anonymous"></script>
 </head>
 
