--- a/index.html
+++ b/index.html
@@ -185,12 +185,7 @@
                     </li>
                 </ul>
                 <div class="map-container">
-                    <iframe title="myFrame"
-                        src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-                        allowfullscreen>
-                        <a href="https://www.gps.ie/" rel="GPS Location"></a>
-                    </iframe>
-               </div>
+                    <iframe src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=1%20o%20connel%20street+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
          </div>
         </section>
     </main>
