--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </li>
                 </ul>
                 <div class="map-container">
-                    <iframe src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=1%20o%20connel%20street+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+                    <iframe title="MyFrame" src="https://www.google.com/maps/embed/v1/place?q=1+grafton+street&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div>
          </div>
         </section>
     </main>
