--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <br>
                     <p>Welcome to Pixel Pals, where gaming friendships are made pixel by pixel.</p>
                 </div>
+                <!--Video-->
                 <div id="video" class="video">
                     <video width="800" autoplay muted controls loop>
                         <source src="assets/video/9068522-hd_1920_1080_25fps.mp4" type="video/mp4">
@@ -90,6 +91,7 @@
                 </div>
             </div>
         </section>
+        <!--Flip Cards-->
         <section class="flip">
             <div class="flip-container">
                 <div class="flip-card">
@@ -167,6 +169,7 @@
             </div>
 
         </section>
+        <!--Contact Us-->
         <section id="contact" class="contact">
             <div id="contact-text" class="contact-text">
                 <h2>Contact Us</h2>
